--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,49 +31,38 @@
         </android.support.v7.widget.Toolbar>
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorBeginText"
-            />
-
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical"></LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorBeginText"/>
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/navigation_home_tablayout"
-            android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:tabIndicatorColor="@color/colorWhite"
-            app:tabMode="fixed">
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/main_page_tabitem"
-                android:layout_width="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/home_main_page_text_view"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:icon="@drawable/main_page_selector"
-                android:text="首页" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/main_zhibo_video_tabitem"
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/icon_home_pressed"
+                android:gravity="center"
+                android:text="@string/app_main_page"
+                 />
+            <ImageView
+                android:id="@+id/main_live_video_image_view"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:icon="@drawable/ic_action_zhibo_video_btn"
-                android:text="" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/main_dynamic_tabitem"
-                android:layout_width="wrap_content"
+                android:src="@drawable/ic_action_zhibo_video_btn"
+                />
+            <TextView
+                android:id="@+id/main_dynamic_image_view"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:icon="@drawable/main_owninfo_selector"
+                android:drawableTop="@drawable/icon_selfinfo_normal"
+                android:gravity="center"
                 android:text="动态" />
-        </android.support.design.widget.TabLayout>
+        </LinearLayout>
     </LinearLayout>
     <!--右滑看到的页面，设置头部和下部菜单-->
     <android.support.design.widget.NavigationView
