--- a/app/src/main/res/menu/nav_home_menu.xml
+++ b/app/src/main/res/menu/nav_home_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/mudi">
-        <item android:id="@+id/home_register"
+        <item android:id="@+id/home_user_register"
             android:title="@string/app_register"
             android:icon="@mipmap/ic_register_img"/>
-        <item android:id="@+id/home_destroy"
+        <item android:id="@+id/home_user_destroy"
             android:title="@string/app_destroy"
             android:icon="@mipmap/ic_login_img"/>
         <item android:id="@+id/home_exit_login"
@@ -13,7 +13,7 @@
             android:icon="@mipmap/ic_login_img"/>
     </group>
    <group android:checkableBehavior="single" android:id="@+id/se">
-       <item android:id="@+id/home_settings"
+       <item android:id="@+id/home_user_settings"
            android:title="@string/app_settings"
            android:icon="@mipmap/ic_settings_img"/>
        <item android:id="@+id/home_dark_mode"
