--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -15,12 +15,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/below_linearlayout"
+        android:id="@+id/top_linearlayout"
         android:orientation="horizontal"
         >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/login_live_logo"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textSize="10sp"
+                android:textSize="15sp"
                 android:textColor="@color/colorToolbar"
                 android:layout_marginTop="20dp"
                 android:text="观看人数: 4512"
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textSize="10sp"
+                android:textSize="15sp"
                 android:textColor="@color/colorPrimary"
                 android:text="粉丝: 4512"
                 android:id="@+id/fans_people_number"
@@ -57,7 +57,6 @@
             android:id="@+id/attention_user_show_recycler_view"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
-
     </LinearLayout>
     <Spinner
         android:layout_width="wrap_content"
@@ -65,7 +64,7 @@
         android:layout_marginRight="5dp"
         android:spinnerMode="dialog"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/below_linearlayout"
+        android:layout_below="@id/top_linearlayout"
         android:background="@drawable/spinner_show_select"
         android:id="@+id/change_beauty_spinner"
         android:layout_alignParentRight="true"
@@ -103,6 +102,7 @@
                 android:layout_weight="7"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/colorStroke"
+                android:textColorHint="#f104f2da"
                 android:hint="@string/app_edit_comment_text"
                 />
             <ImageView
