--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -71,14 +71,6 @@
                 android:text="动态" />
         </android.support.design.widget.TabLayout>
     </LinearLayout>
-    <!--右滑看到的页面，设置头部和下部菜单-->
-    <android.support.design.widget.NavigationView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:id="@+id/home_nav_view"
-        app:headerLayout="@layout/nav_home_header"
-        app:menu="@menu/nav_home_menu"
-        >
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
+
+
