--- a/app/src/main/res/layout/chatting_message_show_item.xml
+++ b/app/src/main/res/layout/chatting_message_show_item.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="30dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="20dp"
         android:id="@+id/live_chatting_message_account"
-        android:textColor="#4a09f458"
+        android:textColor="#2eed08"
         android:text="执念"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000"
-        android:text="  :"
+        android:text=":"
         />
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#4a3d1fe6"
+        android:textColor="#ff052a"
         android:layout_marginLeft="15dp"
         android:text="niaho"
         android:layout_gravity="center_vertical"
