--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -1,43 +1,57 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.example.wkj_pc.fitnesslive.fragment.MainPageFragment">
     <!--设置标题栏-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/home_toolbar"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorToolbar"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/home_message_receive_btn"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/home_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorToolbar"
+            app:layout_scrollFlags="scroll|snap|enterAlways"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             >
-        </ImageView>
-    </android.support.v7.widget.Toolbar>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/home_user_search_img_view"
+                android:src="@mipmap/icon_home_user_search_img"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="10dp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/home_message_receive_btn"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                />
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.32"
-        android:background="@color/colorWhite" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorBlack"
-        />
+        android:layout_height="match_parent"
+        android:id="@+id/home_user_live_show_recycler_view"
+        android:background="@color/colorWhite"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+    </android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
         android:background="@color/color_white"
-        android:layout_marginBottom="5dp"
+        app:layout_scrollFlags="scroll|snap|enterAlways"
+        android:id="@+id/bottom_linearlayout"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/home_main_page_text_view"
@@ -64,4 +78,5 @@
             android:drawableTop="@drawable/icon_selfinfo_normal"
             android:text="我" />
     </LinearLayout>
-</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
