--- a/app/src/main/res/layout/fragment_own_user_info.xml
+++ b/app/src/main/res/layout/fragment_own_user_info.xml
@@ -255,7 +255,7 @@
                     android:text=">"
                     />
             </LinearLayout>
-            <View
+         <!--   <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp"
                 android:background="#f7f6f6" />
@@ -288,7 +288,7 @@
                     android:layout_marginTop="13dp"
                     android:gravity="center_vertical"
                     />
-            </LinearLayout>
+            </LinearLayout>-->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp"
@@ -304,7 +304,7 @@
                     android:layout_height="30dp"
                     android:layout_marginLeft="20dp"
                     android:layout_gravity="center"
-                    android:src="@mipmap/icon_own_user_about_us_img" />
+                    android:src="@mipmap/icon_user_destroy_login_img" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="8"
