--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -1,9 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.wkj_pc.fitnesslive.activity.FindPasswordActivity">
+    android:layout_height="match_parent">
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:id="@+id/about_us_page_destroy_text_view"
+                android:src="@mipmap/icon_about_us_finish_img"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:text="找回密码"
+                android:textColor="#ccc"
+                android:layout_gravity="center"
+                />
+    </android.support.v7.widget.Toolbar>
+    <!--手机号-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:layout_marginTop="40dp"
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/account_linearlayout"
+            android:background="@drawable/shape_nostroke_bg_btn"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="2"
+                android:src="@mipmap/ic_account_img"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="|"
+                android:textSize="20sp"
+                />
+            <EditText
+                android:id="@+id/edit_account"
+                android:layout_width="0dp"
+                android:textSize="18sp"
+                android:layout_height="38sp"
+                android:layout_weight="8"
+                android:background="@null"
+                android:ellipsize="end"
+                android:hint="手机号"
+                android:maxLines="1" />
+        </LinearLayout>
+    </LinearLayout>
+    <!--信息验证码-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:orientation="vertical">
+        android:paddingTop="15dp"
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/password_linearlayout"
+            android:background="@drawable/shape_nostroke_bg_btn"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="2"
+                android:src="@mipmap/ic_password_img"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="|"
+                android:textSize="20sp"
+                />
+            <EditText
+                android:id="@+id/edit_password"
+                android:layout_width="0dp"
+                android:textSize="18sp"
+                android:layout_height="38dp"
+                android:layout_weight="8"
+                android:background="@null"
+                android:ellipsize="end"
+                android:hint="短信验证码"
+                android:maxLines="1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/shape_getverifycode_bg_btn"
+                android:text="@string/app_get_verify_code"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    <!--登录按钮-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:paddingTop="60dp"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="300dp"
+            android:background="@drawable/shape_all_stroke_bg_btn"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="260dp"
+                android:layout_height="38dp"
+                android:background="@null"
+                android:text="@string/app_nextstep"
+                android:onClick="nextstep"
+                android:textSize="24sp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+
