--- a/app/src/main/res/layout/home_user_live_show_item.xml
+++ b/app/src/main/res/layout/home_user_live_show_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         >
         <de.hdodenhof.circleimageview.CircleImageView
@@ -13,7 +13,8 @@
             android:id="@+id/home_live_user_logo"
             android:src="@mipmap/ic_amatar_img"
             android:padding="10dp"
-            android:layout_height="wrap_content" />
+            android:scaleType="centerCrop"
+            android:layout_height="match_parent" />
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
@@ -54,9 +55,9 @@
         android:orientation="horizontal">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="220dp"
             android:id="@+id/home_live_user_show_img"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/lunbo2" />
         <TextView
             android:layout_width="wrap_content"
