--- a/app/src/main/res/drawable/shape_getverifycode_bg_btn.xml
+++ b/app/src/main/res/drawable/shape_getverifycode_bg_btn.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <corners android:radius="10dp"/>
-            <stroke android:color="#ccc" android:width="1dp"/>
+            <stroke android:color="#fff" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
