--- a/app/src/main/res/layout/avtivity_login.xml
+++ b/app/src/main/res/layout/avtivity_login.xml
@@ -54,14 +54,16 @@
                     android:textSize="20sp"
                     />
                 <EditText
-                    android:id="@+id/edit_account"
+                    android:id="@+id/user_login_mobile_num_edit_text"
                     android:layout_width="0dp"
                     android:textSize="18sp"
                     android:layout_height="38sp"
                     android:layout_weight="8"
                     android:background="@null"
                     android:ellipsize="end"
-                    android:hint="手机号|邮箱"
+                    android:inputType="number"
+                    android:maxLength="11"
+                    android:hint="手机号"
                     android:maxLines="1" />
             </LinearLayout>
         </LinearLayout>
@@ -100,7 +102,9 @@
                     android:layout_weight="8"
                     android:background="@null"
                     android:ellipsize="end"
+                    android:inputType="textPassword"
                     android:hint="密码"
+                    android:maxLength="20"
                     android:maxLines="1" />
             </LinearLayout>
         </LinearLayout>
