--- a/app/src/main/res/layout/tools_about_edit_user_infos_item.xml
+++ b/app/src/main/res/layout/tools_about_edit_user_infos_item.xml
@@ -23,7 +23,7 @@
                 android:layout_gravity="left"
                 android:text="取消"
                 android:textSize="20dp"
-                android:textColor="#f5f5f5"
+                android:textColor="#bfb7b7"
                 android:id="@+id/tools_user_info_edit_cancel_text_view"
                 />
             <TextView
@@ -43,7 +43,7 @@
                 android:layout_gravity="right"
                 android:text="确定"
                 android:textSize="20dp"
-                android:textColor="#0598f4"
+                android:textColor="#f2f4f5"
                 android:layout_marginRight="10dp"
                 >
             </TextView>
