--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="color_white">#FFF</color>
     <color name="lighter_gray_no_transparent">#68ede5</color>
     <color name="bottom_menu">#eae4e4</color>
+    <color name="btn_bg">#e9e9e9</color>
 </resources>
