--- a/app/src/main/res/layout/activity_upload_native_video.xml
+++ b/app/src/main/res/layout/activity_upload_native_video.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wkj_pc.fitnesslive.activity.VideoPlayerActivity">
+    tools:context="com.example.wkj_pc.fitnesslive.activity.UploadNativeVideoActivity">
 
 </android.support.constraint.ConstraintLayout>
