--- a/app/src/main/res/layout/activity_upload_native_video.xml
+++ b/app/src/main/res/layout/activity_upload_native_video.xml
@@ -38,10 +38,24 @@
             android:textSize="20dp">
         </TextView>
     </android.support.v7.widget.Toolbar>
-    <android.support.v7.widget.RecyclerView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/upload_native_video_choose_recycler_view"
+        android:orientation="vertical"
         android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/upload_native_video_choose_recycler_view"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:id="@+id/upload_native_video_show_image_view"
+            android:visibility="gone"
+            android:src="@drawable/upload_native_video_empty_show"
+            />
+    </LinearLayout>
 
 </LinearLayout>
