--- a/app/src/main/res/layout/upload_native_video_show_items.xml
+++ b/app/src/main/res/layout/upload_native_video_show_items.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="220dp">
+    android:layout_height="200dp">
     <RelativeLayout
         android:layout_width="match_parent"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_marginTop="5dp"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/upload_native_video_show_image_view"
             android:src="@drawable/biglivepic"
+            android:scaleType="centerCrop"
             />
         <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:button="@drawable/shape_check_box_video_selector"
+            android:layout_alignRight="@+id/upload_native_video_show_image_view"
             android:id="@+id/upload_native_video_show_check_box"
             />
     </RelativeLayout>
