--- a/app/src/main/res/layout/activity_watch_user_live.xml
+++ b/app/src/main/res/layout/activity_watch_user_live.xml
@@ -12,6 +12,16 @@
         android:background="@color/color_white"
         android:layout_height="match_parent"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="直播已经结束"
+        android:visibility="gone"
+        android:id="@+id/watcher_while_live_close_show_text_view"
+        android:textSize="30dp"
+        android:textColor="#0af16e"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,15 +45,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
+                android:textSize="15sp"
+                android:textColor="@color/colorToolbar"
                 android:text="观看人数: 0"
-                android:textSize="10sp" />
-
+                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textSize="10sp"
                 android:text="粉丝: 0"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimary"
                 android:id="@+id/watcher_watch_fans_people_number"
                 />
         </LinearLayout>
@@ -77,6 +89,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
+                android:textColor="@color/colorStroke"
+                android:textColorHint="#f104f2da"
                 android:layout_marginLeft="10dp"
                 android:hint="@string/app_edit_comment_text"
                 />
