--- a/app/src/main/res/layout/activity_watch_user_live.xml
+++ b/app/src/main/res/layout/activity_watch_user_live.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/watcher_login_watch_live_logo"
