--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -54,6 +54,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
             android:id="@+id/attention_user_show_recycler_view"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
